hard-gists/6337361/run.log
=== Docker Run Log for 6337361 ===
Started at: Mi 29. Okt 16:28:37 CET 2025

[2025-10-29 16:28:37] START: Running container for 6337361
[2025-10-29 16:28:38] SUCCESS: Container e4c57b260d34f26efdcb35884ce4d961f2122615012218c2e40c3d8e9a07a659 started for 6337361
=== Container logs for 6337361 ===
  File "/snippet.py", line 28
    print SiteRepository.get_by_id(1)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6337361 ===
[2025-10-29 16:28:40] INFO: Container e4c57b260d34f26efdcb35884ce4d961f2122615012218c2e40c3d8e9a07a659 has stopped
